@@ -1,4 +1,8 @@
-﻿shmuel 10.04.2015 17:44:53 +0200 - build 506
+﻿shmuel 12.04.2015 23:18:52 +0200 - build 507
+
+1. Рефакторинг.
+
+shmuel 10.04.2015 17:44:53 +0200 - build 506
 
 1. LuaFAR: изменения, связанные с функцией far.SubscribeDialogDrawEvents:
    - Функция не обрабатывает параметры и не возвращает значения.
